# web3workbench5june

./: .gitignore  README.md  pyproject.toml
scripts/: build_exe.ps1
tests/: test_workbench.py
workbench/: __init__.py  app.py  cli.py  db.py  gui.py  models.py  parsers.py  services.py  tool_runner.py  web.py  web3bb.py
workbench/static/: app.js  styles.css
workbench/templates/: index.html
