[project]
name = "web3bb-workbench"
version = "0.1.0"
description = "Local Web3 bug bounty target analysis workbench"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "fastapi",
    "PySide6",
    "python-multipart",
    "requests",
    "uvicorn",
]

[project.scripts]
web3bb = "workbench.cli:main"
web3bb-gui = "workbench.gui:main"
web3bb-web = "workbench.web:main"

[tool.setuptools.packages.find]
include = ["workbench*"]
exclude = ["runs*", "workbench_runs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
